# ComfyUI_HunyuanAvatar_Sm

./: HunyuanAvatar_Sm_node.py  README.md  __init__.py  node_utils.py  pyproject.toml  requirements.txt
assets/: test.csv
example_workflows/: HunyuanVideo-Avatar.json  HunyuanVideo-Avatar_dual.json  hunyuanavatar_workflows.json
hymm_gradio/: tool_for_end2end.py
hymm_sp/: config.py  constants.py  helpers.py  inference.py  sample_batch.py  sample_gpu_poor.py  sample_inference_audio.py  sample_inference_audio_back.py
hymm_sp/data_kits/: audio_dataset.py  audio_preprocessor.py  ffmpeg_utils.py
hymm_sp/diffusion/: __init__.py
hymm_sp/diffusion/pipelines/: pipeline_hunyuan_video_audio-back.py  pipeline_hunyuan_video_audio.py
hymm_sp/modules/: audio_adapters.py  config.py  embed_layers.py  fp8_optimization.py  mlp_layers.py  models_audio.py  token_refiner.py
hymm_sp/text_encoder/: __init__.py
hymm_sp/vae/: __init__.py  autoencoder_kl_causal_3d.py
